Updated API implementations for basic root